<resources>
    <string name="app_name">TrippleAProject</string>
    <string name="title_activity_login">Sign In</string>
    <string name="email">tripleaandroid@gmail.com</string>
    <string name="phone">+38166290494</string>
    <string name="about">About</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="ok">OK</string>
    <string name="contact">Contact:</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Google Sign In</string>
    <string name="server_client_id">CLIENT_ID</string>
    <string name="failed_login_message">Failed to sign in via Google account</string>
    <string name="event_end">Event end</string>
    <string name="event_start">Event start</string>
    <string name="alarm_id">com.ftm.trippleaproject.alarms</string>

    <!-- Geofence -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

</resources>
